public/styles.css
body {
  font: 20px Montserrat, sans-serif;
  line-height: 1.8;
  color: #8c8c8c;
  width: 100%;
  height: 100%;
}

p {
  font-size: 16px;
}

.margin {
  margin-bottom: 45px;
}

#bg-1 {
  background-color: #d4d4dc;
  color: #8c8c8c;
  width: 100%;
  height: auto;
}

#bg-2 {
  background-color: #393f4d;
  color: #8c8c8c;
  height: auto;
}

#threeSeventeenFont {
  font-size: 3.17em;
}

.i-am {
  font-size: 3em;
}

#bg-3 {
  background-color: #2f2f2f;
  color: #8c8c8c;
  height: auto;
}

#bg-4 {
  background-color: #1d1e22;
  color: #8c8c8c;
  margin: auto;
}

.container-fluid {
  padding-top: 70px;
  padding-bottom: 70px;
}

.navbar {
  padding-top: 15px;
  padding-bottom: 15px;
  border: 0;
  border-radius: 0;
  margin-bottom: 0;
  font-size: 12px;
  letter-spacing: 5px;
}

.typewriter>.txt {
  border-right: 0.2rem solid #777;
}

.navbar-nav li a:hover {
  color: #1abc9c !important;
}

.profilePic {
  border-radius: 100%;
  cursor: pointer;
  image-orientation: from-image;
  margin-bottom: 5px;
}

.watchLater, .case, .paragraphUtilities-depreceated, .paragraphUtilities, .lowercase, .leapYear, .helloName, .primalityChecker, .paceSeidenbergStemCamp2017, .todayIWill, .projectAutomation, .computerMode, .moodMail {
  width: 300px;
  height: 300px;
}

.projects {
  margin-bottom: 30px;
}

.thumb {
  width: 300px;
  height: 300px;
}

.hovereffect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
  cursor: default;
}

.hovereffect .overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
}

.hovereffect .over {
  display: block;
  position: relative;
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;
}

.hovereffect:hover .over {
  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0.2126 0.7152 0.0722 0 0 0 0 0 1 0" /><feGaussianBlur stdDeviation="3" /></filter></svg>#filter');
  filter: grayscale(1) blur(3px);
  -webkit-filter: grayscale(1) blur(3px);
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.hovereffect h2 {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-size: 17px;
  padding: 10px;
  background: rgba(0, 0, 0, 0.6);
}

.hovereffect p {
  text-transform: uppercase;
  text-align: center;
  position: relative;
  font-size: 8px;
  background: rgba(0, 0, 0, 0.6);
}

.hovereffect div.tooltip {
  display: inline-block;
  text-decoration: none;
  padding: 7px 14px;
  border: 1px solid #fff;
  margin: 10px 0 0 0;
  background-color: transparent;
}

.hovereffect div.tooltip:hover {
  box-shadow: 0 0 5px #fff;
}

.hovereffect div.tooltip, .hovereffect h2, .hovereffect p {
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;
  opacity: 0;
  filter: alpha(opacity=0);
  color: #fff;
  text-transform: uppercase;
}

.hovereffect:hover div.tooltip, .hovereffect:hover h2, .hovereffect:hover p {
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
}

.tooltipSpecial {
  position: static;
  display: inline;
}

.tooltip .tooltiptext, .tooltipSpecial .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  margin-left: -60px;
}

.tooltipSpecial .tooltiptext {
  margin-left: -20px;
}

.tooltip:hover .tooltiptext, .tooltipSpecial:hover .tooltiptext {
  visibility: visible;
}

.gitPic, .webPic, .filePic, .moreInfoPic {
  width: 100px;
  height: 100px;
  border-radius: 100%;
  cursor: pointer;
}

.email:hover {
  text-decoration: underline;
  cursor: default;
}

.otherGithubLink, .otherGithubLink:hover {
  color: #8c8c8c;
}

.row {
  margin-top: 30px;
}

#hstatPhoto, #pacePhoto {
  width: 300px;
  height: 300px;
  margin-top: 10px;
  border-radius: 11%;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  -webkit-transition: all 0.4s ease-in;
  transition: all 0.4s ease-in;
  cursor: pointer;
}

#hstatPhoto:hover, #pacePhoto:hover {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

#pacePhoto {
  background-color: white;
}

.hstatPhotoDiv {
  position: static;
  width: 50vw;
}

.paceDiv {
  position: static;
  width: 50vw;
}

.linkedInPic {
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.gitPhotoLink, .otherAccountProfilePic {
  width: 20px;
  height: 20px;
  border-radius: 100%;
  cursor: pointer;
}

.transition, p, .accordion li i:before, .accordion li i:after {
  transition: all 0.25s ease-in-out;
}

.flipIn, h1, .accordion li {
  animation: flipdown 0.5s ease both;
}

.no-select, h2 {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.accordion {
  list-style: none;
  perspective: 900;
  padding: 0;
  margin: 0;
}

.accordion li {
  position: relative;
  padding: 0;
  margin: 0;
  padding-bottom: 4px;
  padding-top: 18px;
  border-top: 1px dotted #dce7eb;
}

.accordion li:nth-of-type(1) {
  animation-delay: 0.5s;
}

.accordion li:nth-of-type(2) {
  animation-delay: 0.75s;
}

.accordion li:nth-of-type(3) {
  animation-delay: 1s;
}

.accordion li:last-of-type {
  padding-bottom: 0;
}

.accordion li i {
  position: absolute;
  transform: translate(-6px, 0);
  margin-top: 16px;
  right: 0;
}

.accordion li i:before, ul li i:after {
  content: "";
  position: absolute;
  background-color: #ff6873;
  width: 3px;
  height: 9px;
}

.accordion li i:before {
  transform: translate(-2px, 0) rotate(45deg);
}

.accordion li i:after {
  transform: translate(2px, 0) rotate(-45deg);
}

.accordion li input[type=checkbox] {
  position: absolute;
  cursor: pointer;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 0;
}

.accordion li input[type=checkbox]:checked~p {
  margin-top: 0;
  max-height: 0;
  opacity: 0;
  transform: translate(0, 50%);
}

.accordion li input[type=checkbox]:checked~i:before {
  transform: translate(2px, 0) rotate(45deg);
}

.accordion li input[type=checkbox]:checked~i:after {
  transform: translate(-2px, 0) rotate(-45deg);
}

@keyframes flipdown {
  0% {
    opacity: 0;
    transform-origin: top center;
    transform: rotateX(-90deg);
  }

  5% {
    opacity: 1;
  }

  80% {
    transform: rotateX(8deg);
  }

  83% {
    transform: rotateX(6deg);
  }

  92% {
    transform: rotateX(-3deg);
  }

  100% {
    transform-origin: top center;
    transform: rotateX(0deg);
  }
}

.accordionHeader {
  color: rgb(250, 103, 114);
}

.accordionDiv {
  width: 99%;
}

.hstatHeader, .paceHeader {
  margin-bottom: 15px;
}

#text {
  width: 400px;
  height: 200px;
  resize: none;
}

.submitText-case {
  width: 400px;
}

.switch {
  position: relative;
  display: inline-block;
  width: 90px;
  height: 34px;
}

.switch input {
  display: none;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ca2222;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "a";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked+.slider {
  background-color: #2ab934;
}

input:focus+.slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked+.slider:before {
  -webkit-transform: translateX(55px);
  -ms-transform: translateX(55px);
  transform: translateX(55px);
  content: "A";
}

.on {
  display: block;
}

.on, .off {
  color: white;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  font-size: 10px;
  font-family: Verdana, sans-serif;
}

.slider.round {
  border-radius: 14px;
}

.slider.round:before {
  border-radius: 50%;
}

#case-header {
  text-align: center;
}

.case-parent {
  width: 100%;
  height: 100%;
  background-color: lightblue;
}

.project-info-table {
  width: 100%;
  height: 50%;
}

.project-info-table, .project-info-table tr, .project-info-table tr td {
  border: 1px solid red;
  text-align: center;
}

.project-info-header {
  margin-bottom: 25px;
}

.project-name {
  cursor: pointer;
}

.project-name:hover {
  text-decoration: underline;
}

.primalityChecker-body {
  width: 100%;
  height: 100%;
  background-color: #ffffb3;
}

.primalityChecker-heading {
  padding-top: 25px;
}

.primalityChecker-heading, .primalityChecker-primeOrNot {
  text-align: center;
}

.primalityCheckerDiv {
  width: 100vw;
}

.primalityChecker-column .primalityChecker-textInput, .primalityChecker-column .primalityChecker-submit, .primalityChecker-column .primalityChecker-output {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 350px;
  resize: none;
}

.primalityChecker-row {
  margin-top: 100px;
}

#primalityChecker-myProgress {
  width: 100%;
  background-color: #ddd;
}

#primalityChecker-myBar {
  width: 0%;
  height: 30px;
  background-color: #4CAF50;
  text-align: center;
  line-height: 30px;
  color: white;
}

